k8s/pihole/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-to-https: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.home.coredev.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 80
  tls:
    - hosts:
        - pihole.home.coredev.uk
      secretName: pihole-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pihole-real-ip
  namespace: pihole
spec:
  headers:
    customRequestHeaders:
      X-Real-IP: ""
      X-Forwarded-For: ""
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pihole-headers
  namespace: pihole
spec:
  headers:
    customRequestHeaders:
      X-Real-IP: ""
      X-Forwarded-For: ""
    customResponseHeaders:
      X-Frame-Options: "SAMEORIGIN"
      X-Content-Type-Options: "nosniff"
